# bevy-in-web-worker

./: .gitignore  Cargo.toml  Makefile  build-wasm.sh  build.rs  run-wasm.sh
public/: bevy_in_main_thread.js  index.html  index.js  worker.js
src/: bevy_app.rs  canvas_plugin.rs  keyboard.rs  lib.rs  ray_pick.rs  web_ffi.rs
