[package]
name = "bevy-in-web-worker"
description = "bevy +  web worker"
authors = ["Jinlei Li"]
version = "0.2.0"
edition = "2024"
rust-version = "1.88"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
reqwest = { version = "0.13", features = ["blocking","json"] }
dom_query = "0.25"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wgpu = "28"
raw-window-handle = "0.6"
smol_str = "0.2.2"
serde_json = "1.0"
bevy_input = "0.18"
bevy = { version = "0.18", features = [
    "bevy_pbr",
    "bevy_gizmos",
    "bevy_gizmos_render",
    "tonemapping_luts",
    "webgpu",
    "bevy_window",
    "bevy_log",
    "zstd_rust",
], default-features = false }
rand = "0.9"
getrandom = {version = "0.3", features = ["wasm_js"] }
once_cell = "1.21"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
web-sys = { version = "0.3.85", features = [
    "OffscreenCanvas",
    "MouseEvent",
    "WheelEvent",
    "KeyboardEvent",
    "DedicatedWorkerGlobalScope",
    "Event",
    "MessageEvent",
] }
js-sys = "0.3.85"

[profile.wasm-release]
inherits = "release"
debug = 0
opt-level = "z"
strip = "debuginfo"
lto = "fat"
# lto = true
codegen-units = 1
panic = "abort"

# works
[profile.dev-opt]
inherits = "release"
opt-level = 1
lto = false
codegen-units = 256
debug = true
overflow-checks = true
